<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="#F4F6F7">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/surfaceView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2" />

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue_87A7D6"
                android:orientation="horizontal"
                android:padding="4dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tvCarNumber"
                        style="@style/TextStyle.White"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/car_number" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/tvTrainTime"
                            style="@style/TextStyle.White"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/train_time" />

                        <Chronometer
                            android:id="@+id/timer"
                            style="@style/TextStyle.White"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tvLongitude"
                        style="@style/TextStyle.White"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/latitude" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tvSpeed"
                        style="@style/TextStyle.White"
                        android:text="@string/current_speed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tvTrainPart"
                        style="@style/TextStyle.White"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/train_part" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tvTotalTime"
                        style="@style/TextStyle.White"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/total_time" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tvLatitude"
                        style="@style/TextStyle.White"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/longitude" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tvTrainMiles"
                        style="@style/TextStyle.White"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/train_miles"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/blue_87A7D6"
                android:padding="4dp">

                <TextView
                    android:layout_marginRight="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_alignParentRight="true"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:text="学员"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvStudent"
                        style="@style/TextStyle.White"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@mipmap/stu"
                        android:drawablePadding="3dp"
                        android:text="@string/student"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="10dp"
                            android:src="@mipmap/xline" />

                        <TextView
                            android:paddingLeft="8dp"
                            android:id="@+id/tvStudentNumber"
                            android:textColor="@color/white"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </LinearLayout>


            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/green_3BDAD0"
                android:padding="4dp">

                <TextView
                    android:layout_marginRight="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_alignParentRight="true"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:text="教练"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvCoach"
                        style="@style/TextStyle.White"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@mipmap/coa"
                        android:drawablePadding="3dp"
                        android:text="@string/coach"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_marginLeft="10dp"
                            android:src="@mipmap/xline" />

                        <TextView
                            android:textColor="@color/white"
                            android:paddingLeft="8dp"
                            android:id="@+id/tvCoachNumber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnStudentLogout"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    android:text="学员签退"
                    android:textSize="20sp"
                    android:visibility="gone" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnCoachLogout"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    android:text="教练签退"
                    android:textSize="20sp"
                    android:visibility="gone" />


            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:gravity="center_vertical"
        android:id="@+id/layout_bottom_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvDeviceID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_gravity="left"
                android:text="ID："
                style="@style/TextStyle.Black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:gravity="center">

            <TextView
                android:id="@+id/tvDriving"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:text="驾校名称"
                style="@style/TextStyle.Black"
                android:gravity="center_vertical"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/imgEnd"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/chainway_quit_btn_ico"
                android:text="退出"
                style="@style/TextStyle.Black"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
